JEC-44 Change user roles